Closed Bug 1120591 Opened 9 years ago Closed 9 years ago

TSan: data race js/src/jsgc.cpp:1811 updateForRemovedArena

Categories

(Core :: JavaScript: GC, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38

People

(Reporter: froydnj, Assigned: jonco)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tsan])

Attachments

(3 files)

Attached file tsan-js-gc-race.txt
[cribbing from decoder's script, hopefully he won't mind]

The attached logfile shows a thread/data race detected by TSan (ThreadSanitizer).

Typically, races reported by TSan are not false positives, but it is possible that the race is benign. Even in this case though, we should try to come up with a fix unless this would cause unacceptable performance issues. Also note that seemingly benign races can possibly be harmful (also depending on the compiler and the architecture) [1].

If the bug cannot be fixed, then this bug should be used to either make a compile-time annotation for blacklisting or add an entry to the runtime blacklist.

[1] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
Attached file tsan-js-gc-race2.txt
Same read location, but different write location, for flavor.
This is gcTriggerBytes_ stuff it looks like.
We should be able to move the call to updateAfterGC() to avoid this race.
Assignee: nobody → jcoppeard
If we do the update before starting background sweeping we will avoid this race.
Attachment #8550402 - Flags: review?(terrence)
Comment on attachment 8550402 [details] [diff] [review]
bug1120591-tsan-gcTriggerBytes

Review of attachment 8550402 [details] [diff] [review]:
-----------------------------------------------------------------

Yup, makes sense.
Attachment #8550402 - Flags: review?(terrence) → review+
This change provoked an intermittent test failure of the Debugger-debuggees-28.js jit-test in zeal mode 14 that is fixed by bug 1123394.
Depends on: 1123394
This change also causes the failure in bug 1121944.
https://hg.mozilla.org/mozilla-central/rev/2c6305279bd6
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: