Bug 1120591 - Avoid race condition updating gcTriggerBytes_ between main and background threads r=terrence